# ur7e_inference

./: .gitignore  README.md  config.example.yaml  initial_robot_states.json  pyproject.toml
docs/: demo_collection.md  environment_setup.md  vla_inference.md
scripts/: probe_gripper.py  probe_policy.py  probe_sensor.py  start_pi05_server.sh
src/ur7e_vla/: __init__.py  cameras.py  cli.py  config.py  demo_collection.py  demo_gui.py  hardware.py  initial_state.py  policy.py  recording.py  runtime.py  vla_gui.py
src/ur7e_vla_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_demo_collection.py  test_initial_state.py  test_recording.py  test_safety.py
